# unisrv-cli

./: CLAUDE.md  Cargo.toml  README.md  install.sh
api/: Cargo.toml
api/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  test_support.rs
examples/nginx/: unisrv.hcl
examples/uuid_api/: Dockerfile  app.py  unisrv.hcl
src/: config.rs  config_locate.rs  error.rs  lib.rs  main.rs  preferences.rs  progress.rs  resolve.rs  rollout.rs  table.rs
src/auth/: mod.rs
src/commands/: auth.rs  host.rs  login.rs  mod.rs  registry.rs  ui.rs
src/commands/destroy/: execute.rs  mod.rs  resolve.rs  run.rs  stops.rs
src/commands/instance/: list.rs  logs.rs  mod.rs  resolve.rs  run.rs  select_env.rs
src/commands/up/: apply.rs  config.rs  defaults.rs  desired.rs  env_resolve.rs  fetch.rs  mod.rs  parse_error.rs  plan.rs  preflight.rs  render.rs  run.rs  vars.rs
src/commands/up/diff/: deployment.rs  mod.rs  service.rs
src/decl/: load.rs  mod.rs
src/decl/file/: instance.rs  mod.rs  ports.rs
src/hosts/: cert.rs  claim.rs  delete.rs  list.rs  mod.rs
src/instances/: expose.rs  list.rs  logs.rs  mod.rs  run.rs  show.rs  stop.rs
src/login/: mod.rs
src/networks/: create.rs  delete.rs  list.rs  mod.rs  show.rs
src/registry/: client.rs  list.rs  login.rs  mod.rs
src/services/: delete.rs  info.rs  list.rs  location.rs  mod.rs  new.rs  target.rs
