[package]
name = "unisrv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
cidr = "0.3.1"
clap = "4.5.39"
console = "0.15.11"
dialoguer = "0.11.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
indicatif = "0.17.11"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native"] }
log = "0.4.27"
memoize = "0.5.1"
oci-spec = { version = "0.8.3", features = ["distribution", "image"], default-features = false }
reqwest = { version = "0.12.19", features = ["json"] }
reqwest-websocket = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
yapp = "0.5.0"
