[package]
name = "unisrv"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["api"]

[dependencies]
unisrv-api = { path = "api" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.15"
dialoguer = "0.11"
futures-util = "0.3"
indicatif = "0.17"
hcl-rs = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
yapp = "0.5"

[dev-dependencies]
unisrv-api = { path = "api", features = ["test-support"] }
uuid = "1"
tempfile = "3"
